// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Golden Master — /start screens per lifecycleState > EXPIRED 1`] = `
{
  "parseMode": "HTML",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "callback_data": "open_focus_payment",
          "text": "Відновити доступ",
        },
      ],
    ],
  },
  "text": "Тестова

Твій доступ завершено. Всі твої цілі, карта балансу і звіти збережені. Коли будеш готова повернутись — вони тебе чекають.",
}
`;

exports[`Golden Master — /start screens per lifecycleState > FOCUS_PAID — fallback (summary unresolved) 1`] = `
{
  "parseMode": "HTML",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "text": "ЗАПИСАТИСЯ",
          "web_app": {
            "url": "http://localhost:5173/miniapp/zoom-calendar?intent=booking",
          },
        },
      ],
      [
        {
          "callback_data": "ab_test:show_result",
          "text": "ПЕРЕГЛЯНУТИ РЕЗУЛЬТАТ",
        },
      ],
      [
        {
          "text": "КАНАЛ ФОКУСУ",
          "url": "https://t.me/focus-channel",
        },
      ],
    ],
  },
  "text": "Тестова

Твій доступ до ФОКУСУ активний до 15 листопада 2026 р.

Найближча Zoom-практика — 3 серпня о 19:00.

Ти ще не записана.",
}
`;

exports[`Golden Master — /start screens per lifecycleState > FOCUS_PAID — with resolved summary 1`] = `
{
  "parseMode": "HTML",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "text": "ЗАПИСАТИСЯ",
          "web_app": {
            "url": "http://localhost:5173/miniapp/zoom-calendar?intent=booking",
          },
        },
      ],
      [
        {
          "callback_data": "ab_test:show_result",
          "text": "ПЕРЕГЛЯНУТИ РЕЗУЛЬТАТ",
        },
      ],
      [
        {
          "text": "КАНАЛ ФОКУСУ",
          "url": "https://t.me/focus-channel",
        },
      ],
    ],
  },
  "text": "Тестова

Твій доступ до ФОКУСУ активний до 15 листопада 2026 р.

Найближча Zoom-практика — 3 серпня о 19:00.

Ти ще не записана.",
}
`;

exports[`Golden Master — /start screens per lifecycleState > NEW_USER 1`] = `
{
  "parseMode": "HTML",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "callback_data": "ab_test:start",
          "text": "ПОЧАТИ ТЕСТ",
        },
      ],
    ],
  },
  "text": "Тестова

Привіт.

Це тест AB System: <b>Чому ти відкладаєш те що давно хочеш зробити?</b>

Він допоможе побачити чому ти знову переносиш важливе і <b>з чого почати</b>.

Тут не буде складних питань. Просто відповідай так як є зараз.",
}
`;

exports[`Golden Master — /start screens per lifecycleState > NEW_USER without firstName — no header line 1`] = `
{
  "parseMode": "HTML",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "callback_data": "ab_test:start",
          "text": "ПОЧАТИ ТЕСТ",
        },
      ],
    ],
  },
  "text": "Привіт.

Це тест AB System: <b>Чому ти відкладаєш те що давно хочеш зробити?</b>

Він допоможе побачити чому ти знову переносиш важливе і <b>з чого почати</b>.

Тут не буде складних питань. Просто відповідай так як є зараз.",
}
`;

exports[`Golden Master — /start screens per lifecycleState > OFFER_SHOWN + NO_ACCESS 1`] = `
{
  "parseMode": "HTML",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "callback_data": "open_focus_payment",
          "text": "ХОЧУ У ФОКУС →",
        },
      ],
      [
        {
          "callback_data": "ab_test:restart",
          "text": "ПРОЙТИ ТЕСТ ЗАНОВО",
        },
      ],
      [
        {
          "callback_data": "ab_test:show_result",
          "text": "МІЙ РЕЗУЛЬТАТ",
        },
      ],
    ],
  },
  "text": "Тестова

У тебе вже є <b>результат</b> тесту.

Хочеш відкрити його ще раз або пройти тест заново?",
}
`;

exports[`Golden Master — /start screens per lifecycleState > POST_ZOOM_1 1`] = `
{
  "parseMode": "HTML",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "callback_data": "post_zoom:leave_insight",
          "text": "ЗАЛИШИТИ ІНСАЙТ",
        },
      ],
      [
        {
          "callback_data": "post_zoom:absystem_cta",
          "text": "ПРОДОВЖИТИ З ABSYSTEM",
        },
      ],
      [
        {
          "callback_data": "focus:next_zoom",
          "text": "КАЛЕНДАР",
        },
      ],
    ],
  },
  "text": "Тестова

🚀 ABSystem AI після Zoom
На Zoom ти вже побачила свою точку зупинки. Але між практиками — 7 днів. Саме там рух часто зникає. ABSystem AI — це те, що тримає твій фокус щодня між Zoom.
────────────────────────────────
🌿 <b>Практика завершилась.</b>
Щоб цей крок не загубився,
зафіксуй для себе лише дві речі.
<b>1. Який інсайт був найціннішим?</b>
<b>2. Який один крок зробиш до наступної практики?</b>",
}
`;

exports[`Golden Master — /start screens per lifecycleState > TEST_DONE + NO_ACCESS 1`] = `
{
  "parseMode": "HTML",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "callback_data": "ab_test:show_result",
          "text": "МІЙ РЕЗУЛЬТАТ",
        },
      ],
      [
        {
          "callback_data": "ab_test:restart",
          "text": "🔄 ПРОЙТИ ЗАНОВО",
        },
      ],
    ],
  },
  "text": "Тестова

Твій <b>результат</b> уже готовий.

Можеш переглянути його ще раз або пройти тест заново.",
}
`;

exports[`Golden Master — /start screens per lifecycleState > TEST_DONE without result (edge case) 1`] = `
{
  "parseMode": "HTML",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "callback_data": "ab_test:show_result",
          "text": "ПОКАЗАТИ РЕЗУЛЬТАТ",
        },
      ],
      [
        {
          "callback_data": "ab_test:restart",
          "text": "ПОЧАТИ ТЕСТ ЗАНОВО",
        },
      ],
      [
        {
          "callback_data": "open_focus_payment",
          "text": "ХОЧУ У ФОКУС →",
        },
      ],
    ],
  },
  "text": "Тестова

Твій <b>результат</b> готовий. Подивись висновок і переходь до наступного кроку у ФОКУС.",
}
`;

exports[`Golden Master — /start screens per lifecycleState > TEST_IN_PROGRESS (recent) 1`] = `
{
  "parseMode": "HTML",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "callback_data": "ab_test:resume",
          "text": "ПРОДОВЖИТИ ТЕСТ",
        },
      ],
      [
        {
          "callback_data": "ab_test:restart",
          "text": "🔄 ПРОЙТИ ЗАНОВО",
        },
      ],
    ],
  },
  "text": "Тестова

Ти вже почала тест. Продовжимо з того місця, де зупинилась?",
}
`;

exports[`Golden Master — /start screens per lifecycleState > TEST_IN_PROGRESS (stale, >168h) 1`] = `
{
  "parseMode": "HTML",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "callback_data": "ab_test:resume",
          "text": "ПРОДОВЖИТИ",
        },
        {
          "callback_data": "ab_test:restart",
          "text": "ПОЧАТИ ЗАНОВО",
        },
      ],
    ],
  },
  "text": "Тестова

Ти вже починала тест, але пройшло більше тижня.

Відповіді можуть бути неактуальні.",
}
`;

exports[`Golden Master — /start screens per lifecycleState > TEST_NOT_STARTED 1`] = `
{
  "parseMode": "HTML",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "callback_data": "ab_test:start",
          "text": "ПОЧАТИ ТЕСТ",
        },
      ],
    ],
  },
  "text": "Тестова

Ти вже тут.

Натисни "Пройти тест", щоб почати.",
}
`;

exports[`Golden Master — /start screens per lifecycleState > UPSELL 1`] = `
{
  "parseMode": "HTML",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "text": "ПЕРЕЙТИ В ABSYSTEM AI",
          "url": "https://example.com/checkout/golden-user-id?product=absystem_ai&plan=1month_upgrade",
        },
      ],
      [
        {
          "callback_data": "focus:next_zoom",
          "text": "КАЛЕНДАР",
        },
      ],
    ],
  },
  "text": "Тестова

🚀 ABSystem AI наступний крок

Ти вже 4 тижні у ФОКУСІ. ABSystem AI — наступний рівень: щоденна підтримка між практиками. Доплата — 1120 грн (твій ФОКУС зараховується).",
}
`;

exports[`Golden Master — /start screens per lifecycleState > ZOOM_MEMBER — fallback (summary unresolved) 1`] = `
{
  "parseMode": "HTML",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "text": "ЗАПИСАТИСЯ",
          "web_app": {
            "url": "http://localhost:5173/miniapp/zoom-calendar?intent=booking",
          },
        },
      ],
      [
        {
          "callback_data": "ab_test:show_result",
          "text": "ПЕРЕГЛЯНУТИ РЕЗУЛЬТАТ",
        },
      ],
      [
        {
          "text": "КАНАЛ ФОКУСУ",
          "url": "https://t.me/focus-channel",
        },
      ],
    ],
  },
  "text": "Тестова

Твій доступ до ФОКУСУ активний до 15 листопада 2026 р.

Найближча Zoom-практика — 3 серпня о 19:00.

Ти вже записана.",
}
`;

exports[`Golden Master — /start screens per lifecycleState > ZOOM_MEMBER — with resolved summary (composed with Zoom section) 1`] = `
{
  "parseMode": "HTML",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "text": "ЗАПИСАТИСЯ",
          "web_app": {
            "url": "http://localhost:5173/miniapp/zoom-calendar?intent=booking",
          },
        },
      ],
      [
        {
          "callback_data": "ab_test:show_result",
          "text": "ПЕРЕГЛЯНУТИ РЕЗУЛЬТАТ",
        },
      ],
      [
        {
          "text": "КАНАЛ ФОКУСУ",
          "url": "https://t.me/focus-channel",
        },
      ],
    ],
  },
  "text": "Тестова

Твій доступ до ФОКУСУ активний до 15 листопада 2026 р.

Найближча Zoom-практика — 3 серпня о 19:00.

Ти вже записана.",
}
`;
